[metadata]
name = sithom
version = 0.0.1
author =  Simon Thomas
author_email = sdat2@cam.ac.uk
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sdat2/sithom
project_urls =
    Bug Tracker = https://github.com/sdat2/sithom
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = sithom
packages = find:
python_requires = >=3.6

[options.packages.find]
where = sithom
